--- a/spring/spring-ioc/pom.xml
+++ b/spring/spring-ioc/pom.xml
@@ -11,5 +11,23 @@
 
     <artifactId>spring-ioc</artifactId>
 
+    <dependencies>
+        <!--spring整合kafka-->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>2.1.7.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
+        </dependency>
+    </dependencies>
 
 </project>
